is it lemon day possibly done

--- a/projects/is-it-lemon-day/index.html
+++ b/projects/is-it-lemon-day/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/lit.css">
+    <link rel="icon" type="image/x-icon" href="lemon.png">
     <title>Is It Lemon Day?</title>
     <style>
         @font-face {
-            font-family: 'LCD';
-            src: url('LCD14.woff2') format('woff2'),
-                url('LCD14.woff') format('woff'),
-                url('LCD14.ttf') format('truetype');
+            font-family: 'DSEG14';
+            src: url('DSEG14Modern-Regular.woff2') format('woff2'),
+                url('DSEG14Modern-Regular.woff') format('woff'),
+                url('DSEG14Modern-Regular.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
         }
+
         .date {
-            font-family: 'LCD', Arial, monospace;
+            font-family: 'DSEG14', Arial, monospace;
             font-size: larger;
         }
     </style>
 </head>
+
 <body class="c">
     <div class="card">
         <h1>Is It Lemon Day?</h1>
@@ -33,10 +40,12 @@
 
             </div>
         </div>
+        <a href="what.html">what is lemon day?</a>
     </div>
-    <a href="what.html">what is lemon day</a>
+    <a href="/index.html">home</a>
 
 
     <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
