--- a/projects/is-it-lemon-day/what.html
+++ b/projects/is-it-lemon-day/what.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/lit.css">
+    <link rel="icon" type="image/x-icon" href="lemon.png">
     <title>What is Lemon Day?</title>
     <style>
         @font-face {
-            font-family: 'LCD';
-            src: url('LCD14.woff2') format('woff2'),
-                url('LCD14.woff') format('woff'),
-                url('LCD14.ttf') format('truetype');
+            font-family: 'DSEG14';
+            src: url('DSEG14Modern-Regular.woff2') format('woff2'),
+                url('DSEG14Modern-Regular.woff') format('woff'),
+                url('DSEG14Modern-Regular.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
         }
+
         .date {
-            font-family: 'LCD14', 'Courier New', Courier, monospace;
-            font-size: larger;
+            font-family: 'DSEG14', 'Courier New', Courier, monospace;
+            font-size: 5em;
         }
     </style>
 </head>
-<body class = "c">
+
+<body class="c">
     <div class="card">
         <h1>What is Lemon Day?</h1>
-        <p>Lemon Day is when the date looks like the word lemon.</p>
-        <p id="dateDM" class="date" style="">01/3/mon</p>
+        <p>Lemon Day is when the date looks like the word lemon, as shown below.</p>
+        <p id="dateDM" class="date" style="">1/3/mon</p>
+        <a href="index.html">back</a>
     </div>
 </body>
+
 </html>
