--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <div class="row">
         <div class="6 col">
             <h2>Projects</h2>
-            <a href="projects/is-it-lemon-day/index.html">Is It Lemon Day?</a>    
+            <ul>
+                <li><a href="projects/is-it-lemon-day/index.html">Is It Lemon Day?</a></li>    
+            </ul>
         </div>
         
     </div>
