--- a/projects/is-it-lemon-day/index.html
+++ b/projects/is-it-lemon-day/index.html
@@ -27,17 +27,22 @@
 
 <body class="c">
     <div class="card">
-        <h1>Is It Lemon Day?</h1>
-        <p id="announcement">Page requires JavaScript!</p>
+        <div class="center">
+            <h1>Is It Lemon Day?</h1>
+            <p id="announcement">Page requires JavaScript!</p>
+        </div>
         <div class="row">
-            <div id="lemonMD" class="6 col">
-                <h4>MM/DD</h4>
-                <p id="dateMD" class="date" style="">1/1/Mon</p>
+            <div class="card col" style="text-align: center;">
+                <div id="lemonMD">
+                    <h2>MM/DD</h2>
+                    <p id="dateMD" class="date" style="">1/1/Mon</p>
+                </div>
             </div>
-            <div id="lemonDM" class="6 col">
-                <h4>DD/MM</h4>
-                <p id="dateDM" class="date" style="">1/1/Mon</p>
-
+            <div class="card col" style="text-align: center;">
+                <div id="lemonDM">
+                    <h2>DD/MM</h2>
+                    <p id="dateDM" class="date" style="">1/1/Mon</p>
+                </div>
             </div>
         </div>
         <a href="what.html">what is lemon day?</a>
