--- a/projects/is-it-lemon-day/what.html
+++ b/projects/is-it-lemon-day/what.html
@@ -29,7 +29,11 @@
     <div class="card">
         <h1>What is Lemon Day?</h1>
         <p>Lemon Day is when the date looks like the word lemon, as shown below.</p>
-        <p id="dateDM" class="date" style="">1/3/mon</p>
+        <p id="dateDM" class="date center">1/3/mon</p>
+        <div class="center">
+        <img src="lemon.png" class="2 col" alt="lemon">
+        <p><i>A lemon.</i></p>
+        </div>
         <a href="index.html">back</a>
     </div>
 </body>
