added input to see if (mostly) any date is lemon day

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <div class="6 col">
                 <h2>Info</h2>
                 <p>I like coding sometimes</p>
+                <h3>Links</h3>
+                <a href="https://skank.itch.io/">my itch.io</a><br>
                 <a href="https://ajusa.github.io/lit/">CSS framework used</a>
             </div>
         </div>
@@ -27,10 +29,12 @@
         <div class="6 col">
             <h2>Projects</h2>
             <div class="4 card col">
-               
                 <a href="/projects/is-it-lemon-day/index.html"><img src="/projects/is-it-lemon-day/lemon.png" class="w-100" alt="lemon"></a>
                 <h4><a href="/projects/is-it-lemon-day/index.html">Is It Lemon Day?</a></h4>
-                
+            </div>
+            <div class="4 card col">
+                <a href="/projects/nothing/index.html"><img src="/projects/nothing/nothing.png" class="w-100" alt="lemon"></a>
+                <h4><a href="/projects/nothing/index.html">Nothing</a></h4>
             </div>
             <div class="4 card col">
                 <a href="/projects/nothing/index.html"><img src="/projects/nothing/nothing.png" class="w-100" alt="lemon"></a>
