fixed a horrible terrible typo

--- a/projects/is-it-lemon-day/what.html
+++ b/projects/is-it-lemon-day/what.html
@@ -28,21 +28,21 @@
 <body class="c">
     <div class="card">
         <h1>What is Lemon Day?</h1>
-        <p>Lemon Day is when the date looks like the word lemon. Some examples are shown below.</p>
+        <p>Lemon Day is when the date looks like the word "lemon." Some examples are shown below.</p>
         <div class="center row">
             <div class="card 4 col">
                 <p id="dateDM" class="date">1/3/mon</p>
-                <p><i>A date that looks like the word lemon in the mm/dd format.</i></p>
+                <p><i>A date that looks like the word "lemon" in the mm/dd format.</i></p>
             </div>
             <div class="card 4 col">
                 <p id="dateDM" class="date">1/3/mon</p>
-                <p><i>A date that looks like the word lemon in the dd/mm format.</i></p>
+                <p><i>A date that looks like the word 'lemon' in the dd/mm format.</i></p>
             </div>
         </div>
         <div class="row center">
             <div class="card 4 col">
                 <p id="dateDM" class="date">5/13/mon</p>
-                <p><i>A date that looks like the word lemon (currently only possible in the mm/dd format).</i></p>
+                <p><i>A date that looks like the word "lemon" (currently only possible in the mm/dd format).</i></p>
             </div>
             <div class="card 4 col">
                 <div class="card"><img src="lemon.png" style="width: 50%;" alt="lemon"></div>
