gonna start working on attacking states.
wish me lock

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <h4><a href="/projects/is-it-lemon-day/index.html">Is It Lemon Day?</a></h4>
             </div>
             <div class="4 card col">
-                <a href="/projects/nothing/index.html"><img src="/projects/nothing/nothing.png" class="w-100" alt="lemon"></a>
+                <a href="/projects/nothing/index.html"><img src="/projects/nothing/nothing.png" class="w-100"></a>
                 <h4><a href="/projects/nothing/index.html">Nothing</a></h4>
             </div>
             <div class="4 card col">
-                <a href="/projects/nothing/index.html"><img src="/projects/nothing/nothing.png" class="w-100" alt="lemon"></a>
+                <a href="/projects/nothing/index.html"><img src="/projects/nothing/nothing.png" class="w-100"></a>
                 <h4><a href="/projects/nothing/index.html">Nothing</a></h4>
             </div>
         </div>
