--- a/projects/is-it-lemon-day/what.html
+++ b/projects/is-it-lemon-day/what.html
@@ -10,9 +10,9 @@
     <style>
         @font-face {
             font-family: 'DSEG14';
-            src: url('DSEG14Modern-Regular.woff2') format('woff2'),
-                url('DSEG14Modern-Regular.woff') format('woff'),
-                url('DSEG14Modern-Regular.ttf') format('truetype');
+            src: url('/assets/DSEG14Modern-Regular.woff2') format('woff2'),
+                url('/assets/DSEG14Modern-Regular.woff') format('woff'),
+                url('/assets/DSEG14Modern-Regular.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
