changed my legal name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card">
         <div class="row">
             <div class="6 col">
-                <h1>Timb Eater's Website</h1>
+                <h1>Skank's Website</h1>
                 <img src="/assets/timb.jpg" class="w-100" alt="хакерман">
             </div>
             <div class="6 col">
